fix z-index

--- a/css/burger.css
+++ b/css/burger.css
@@ -3,13 +3,14 @@
 }
 
 .footer_box {
+  position: absolute;
   display: none;
   color: #f3f3f3;
   margin: 0 3rem;
-  position: absolute;
-  bottom: 20rem;
+  bottom: 0;
   left: 0;
   right: 0;
+  line-height: 1;
 }
 
 .footer_box p {
@@ -19,6 +20,7 @@
 @media (max-width: 960px) {
   .footer_box {
     display: block;
+    margin-left: 6rem;
   }
 
   #menu__toggle:checked ~ .menu__btn > span {
@@ -48,7 +50,7 @@
     width: 30px;
     height: 26px;
     cursor: pointer;
-    z-index: 1;
+    z-index: 2;
   }
 
   .menu__btn > span,
@@ -73,6 +75,7 @@
   }
 
   .menu__box {
+    z-index: 1;
     display: block;
     position: fixed;
     visibility: hidden;
